@@ -74,6 +74,7 @@
                 <div class="ib-square"></div>
                 <div class="ib-square-hollow"></div>
                 <div class="ib-square-dot"></div>
+                <div class="ib-square-four"></div>
                 <div class="ib-rhombus"></div>
                 <div class="ib-rhombus-hollow"></div>
                 <div class="ib-octagon"></div>
