@@ -40,6 +40,7 @@
 @import "scss/shapes/square";
 @import "scss/shapes/square-hollow";
 @import "scss/shapes/square-dot";
+@import "scss/shapes/square-four";
 @import "scss/shapes/circle";
 @import "scss/shapes/circle-hollow";
 @import "scss/shapes/circle-dot";
